crates/telemetry-adapters/tests/snapshots/snapshots_extended__lfs_outgauge_normalized_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_extended.rs
assertion_line: 105
expression: normalized
---
speed_ms: 30
steering_angle: 0
throttle: 0.7
brake: 0.2
clutch: 0
rpm: 4500
max_rpm: 0
gear: 2
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.7
engine_temp_c: 0
extended:
  oil_pressure_bar:
    type: Float
    value: 0
  oil_temp_c:
    type: Float
    value: 0
  shift_light:
    type: Boolean
    value: false
  turbo_bar:
    type: Float
    value: 0
sequence: 0
