crates/telemetry-adapters/tests/snapshots/snapshots_extended__project_cars_3_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_extended.rs
assertion_line: 178
expression: normalized
---
speed_ms: 45
steering_angle: 0.1496063
throttle: 0.7490196
brake: 0
clutch: 0
rpm: 7200
max_rpm: 8500
gear: 4
num_gears: 6
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  boost_amount:
    type: Integer
    value: 0
  crash_state:
    type: Integer
    value: 0
  fuel_capacity:
    type: Integer
    value: 0
  fuel_pressure_kpa:
    type: Integer
    value: 0
  oil_pressure_kpa:
    type: Integer
    value: 0
  oil_temp_c:
    type: Integer
    value: 0
  water_pressure_kpa:
    type: Integer
    value: 0
sequence: 0
